# AntlrGrammarFuzzer

./: .gitignore  .pylintrc  .travis.yml  LICENSE.txt  README.md  config.ini  config_file_syntax.md  generator-cli.py  pyproject.toml  requirements.txt  tox.ini
agf/: __init__.py  __main__.py  checkgrammar.py  checkoriginal.py  rule.py
agf/antlr4_parser/: __init__.py  ast.py  expressions.py  parser.py  scanner.py  token.py  token_type.py
agf/generator/: abstract_generator.py  config_generator.py  generator.py  generator_mode.py
agf/utils/: decor.py
docs/: config_file_syntax.md  example_config_file.md  examples.md  getting_started.md
generator/: __init__.py  abstractgenerator.py  checkgrammar.py  checkoriginal.py  config_generator.py  generator.py  generator_mode.py  my_error.py  rule.py  supportfunc.py
generator/scanner/: __init__.py  antlrexpr.py  ast.py  parser.py  scanner.py  token.py  tokentype.py
grammar/antlr4/mysql/: mysqlLexer.g4  mysqlLexer.py  mysqlParser.g4  mysqlParser.py  mysqlParserListener.py
grammar/antlr4/tsql/: TSqlLexer.g4  TSqlLexer.py  TSqlParser.g4  TSqlParser.py  TSqlParserListener.py
sql_forms/: SelectForms.sql
tests/: __init__.py  test_ast.py  test_parser.py  test_rule_tree.py  test_scanner.py
