[tool.poetry]
name = "agf"
version = "0.1.0"
description = "Antlr grammar base fuzzer"
authors = ["Sergey Reshetnikov <resh.sersh@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
mysql-connector = "^2.2"
pytest = "^4.4"
tox = "^3.8"
antlr4-python3-runtime = "^4.7"
pyodbc = "^4.0"
attrs = "^19.1"
mypy = "^0.700.0"
pylint = "^2.3"
astroid = "^2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
